--- a/src/ComicBookGallery/Views/ComicBooks/Detail.cshtml
+++ b/src/ComicBookGallery/Views/ComicBooks/Detail.cshtml
@@ -1,5 +1,10 @@
 ﻿@{
     Layout = null;
+
+    var seriesTitle = "The Amazing Spider-Man";
+    var issueNumber = 700;
+    var description = "<p>Final issue! Witness as <strong>Peter Parkes</strong> leaves this world :(</p>";
+    var artists = new string[] { "Script: Dan Slott", "Pencils: Humberto Ramos", "Inks: Victor Olazaba", "Colors: Edgar Delgado", "Letters: Chris Eliopoulus" };
 }
 
 <!DOCTYPE html>
@@ -11,7 +16,14 @@
 </head>
 <body>
     <div>
-        <h1>Hello from our view!</h1>
+        <h1>@seriesTitle</h1>
+        <h2>Issue #@issueNumber </h2>
+
+        <h5>Description:</h5>
+        <div>@Html.Raw(description)</div>
+
+        <h5>Artists:</h5>
+        <div>@artists</div>
     </div>
 </body>
 </html>
