--- a/src/ComicBookGallery/Views/ComicBooks/Detail.cshtml
+++ b/src/ComicBookGallery/Views/ComicBooks/Detail.cshtml
@@ -1,10 +1,5 @@
 ﻿@{
     Layout = null;
-
-    var seriesTitle = "The Amazing Spider-Man";
-    var issueNumber = 700;
-    var description = "<p>Final issue! Witness as <strong>Peter Parkes</strong> leaves this world :(</p>";
-    var artists = new string[] { "Script: Dan Slott", "Pencils: Humberto Ramos", "Inks: Victor Olazaba", "Colors: Edgar Delgado", "Letters: Chris Eliopoulus" };
 }
 
 <!DOCTYPE html>
@@ -16,19 +11,19 @@
 </head>
 <body>
     <div>
-        <h1>@seriesTitle</h1>
-        <h2>Issue #@issueNumber </h2>
+        <h1>@ViewBag.SeriesTitle</h1>
+        <h2>Issue #@ViewBag.IssueNumber </h2>
 
         <h5>Description:</h5>
-        <div>@Html.Raw(description)</div>
+        <div>@Html.Raw(ViewBag.Description)</div>
 
-        @if (artists.Length > 0)
+        @if (ViewBag.Artists.Length > 0)
         {
             <h5>Artists:</h5>
             <div>
                 <ul>
-                    @foreach (var artist in artists)
-                {
+                    @foreach (var artist in ViewBag.Artists)
+                    {
                         <li>@artist</li>
                     }
                 </ul>
